# shrinkwrap-rs

./: Cargo.toml  README.md
examples/auto-transform-to-nest-impls/: Cargo.toml
examples/auto-transform-to-nest-impls/src/: main.rs
examples/fallible/: Cargo.toml
examples/fallible-optional/: Cargo.toml
examples/fallible-optional/src/: main.rs
examples/fallible/src/: main.rs
examples/infallible/: Cargo.toml
examples/infallible-optional/: Cargo.toml
examples/infallible-optional/src/: main.rs
examples/infallible/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/readme/: Cargo.toml
examples/readme/src/: main.rs
examples/utils/: Cargo.toml
examples/wrap-derive-fallible/: Cargo.toml
examples/wrap-derive-fallible/src/: main.rs
shrinkwrap/: Cargo.toml  README.md
shrinkwrap-macros/: Cargo.toml  README.md
shrinkwrap-macros/src/: generate.rs  lib.rs  model.rs  parse.rs  types.rs  util.rs  wrap.rs
shrinkwrap-macros/src/generate/: state.rs  types.rs
shrinkwrap-macros/src/generate/structs/: derives.rs  doc.rs  mod.rs
shrinkwrap-macros/src/generate/trait_impl/: build_nest_value.rs  mod.rs  to_wrapped_with.rs  transform_to_deep_nest.rs  transform_to_nest.rs
shrinkwrap-macros/src/mapping/: types.rs
shrinkwrap-macros/src/parse/: types.rs
shrinkwrap-macros/src/serialize/: types.rs
shrinkwrap-macros/src/util/: expand.rs  expand_no_op.rs
shrinkwrap/src/: build_nest_value.rs  lib.rs  nest.rs  transform.rs  try_build_nest_value.rs  try_nest.rs  try_to_nest.rs  try_wrap.rs  wrap.rs
