[workspace]
resolver = "3"
members = [
    "shrinkwrap",
    "shrinkwrap-macros",
    "examples/wrap-derive",
    # "examples/wrap-derive-fallible",
    # "examples/minimal",
    # "examples/readme",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
categories = ["data-structures", "development-tools", "value-formatting"]
repository = "https://github.com/kylekingcdn/shrinkwrap-rs"
readme = "README.md"
license = "MIT"


