[workspace]
resolver = "3"
members = [
    "shrinkwrap",
    "shrinkwrap-macros",
    "examples/auto-transform-to-nest-impls",
    "examples/infallible",
    "examples/infallible-optional",
    "examples/fallible",
    "examples/fallible-optional",
    "examples/minimal",
    "examples/readme",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
categories = ["data-structures", "development-tools", "value-formatting"]
repository = "https://github.com/kylekingcdn/shrinkwrap-rs"
license = "MIT"

[workspace.dependencies]
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
