[package]
name = "shrinkwrap-macros"
description = "Macros for shrinkwrap"
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
default = []
expand = ["prettyplease"]

[dependencies]
darling = "0.23.0"
heck = "0.5.0"
prettyplease = { version = "0.2.37", optional = true }
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["extra-traits"] }
