[package]
name = "shrinkwrap"
version = "0.4.0"
edition = "2024"
description = "Automates the wrapping and nesting of additional variations for some or all of a struct's fields."
categories = ["data-structures", "development-tools", "value-formatting"]
repository = "https://github.com/kylekingcdn/shrinkwrap-rs"
license = "MIT"

[lib]

[features]
default = []
expand = ["shrinkwrap-macros/expand"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
shrinkwrap-macros = { version = "0.4.0", path = "../shrinkwrap-macros" }
