[package]
name = "shrinkwrap"
description = "Automates the wrapping and nesting of additional variations for some or all of a struct's fields."
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]

[features]
default = []
expand = ["shrinkwrap-macros/expand"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
shrinkwrap-macros = { version = "0.6.0", path = "../shrinkwrap-macros" }
