[package]
name = "example-auto-transform-to-nest-impls"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true

[features]
default = []
expand = ["shrinkwrap/expand"]

[dependencies]
shrinkwrap = { path = "../../shrinkwrap" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

chrono = { version = "0.4.41", features = ["serde"] }
