[package]
name = "example-minimal"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true

[features]
default = []
expand = ["shrinkwrap/expand"]

[dependencies]
shrinkwrap = { path = "../../shrinkwrap" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
