[package]
name = "example-readme"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
# default = ["expand"]
expand = ["shrinkwrap/expand"]

[dependencies]
shrinkwrap = { path = "../../shrinkwrap" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
schemars = "1.0.4"
quote = "1.0.40"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
